[package]
name = "sam"
version = "0.1.0"
authors = ["otsukaresamaja <christophersugai@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.13"
noodles-bam = { git = "https://github.com/zaeleus/noodles.git" }
noodles-sam = { git = "https://github.com/zaeleus/noodles.git" }
